# IoCanaryLearn

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/chang/iocanarylearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-canary-jni.cpp  native-lib.cpp
app/src/main/cpp/libcanary/: CMakeLists.txt
app/src/main/cpp/libcanary/comm/: io_canary_utils.cpp  io_canary_utils.h
app/src/main/cpp/libcanary/core/: io_canary.cpp  io_canary.h  io_canary_env.cpp  io_canary_env.h  io_info_collector.cpp  io_info_collector.h
app/src/main/cpp/libcanary/detector/: detector.cpp  detector.h  main_thread_detector.cpp  main_thread_detector.h  repeat_read_detector.cpp  repeat_read_detector.h  small_buffer_detector.cpp  small_buffer_detector.h
app/src/main/cpp/libcanary/md5/: md5.cpp  md5.h
app/src/main/cpp/libcount/: CMakeLists.txt  add.cpp  countutil.h  div.cpp  mul.cpp  sub.cpp
app/src/main/cpp/libget/: CMakeLists.txt  get1.cpp  get2.cpp  get3.cpp  getutil.h
app/src/main/cpp/libxhook/: CMakeLists.txt
app/src/main/java/com/chang/iocanarylearn/: IOCanaryJniBridge.java  IOIssue.java  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/chang/iocanarylearn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
